--- a/Front-End Warm Up/Front-End Warm Up.csproj
+++ b/Front-End Warm Up/Front-End Warm Up.csproj
@@ -66,8 +66,18 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Front-End Warm Up.dll" />
+    <Content Include="bin\Front-End Warm Up.pdb" />
+    <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <Content Include="obj\Debug\Front-End Warm Up.csproj.CopyComplete" />
+    <Content Include="obj\Debug\Front-End Warm Up.csproj.CoreCompileInputs.cache" />
+    <Content Include="obj\Debug\Front-End Warm Up.csprojResolveAssemblyReference.cache" />
     <None Include="packages.config" />
     <Content Include="home.html" />
+    <Content Include="login.html" />
+    <Content Include="obj\Debug\Front-End Warm Up.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\Front-End Warm Up.dll" />
+    <Content Include="obj\Debug\Front-End Warm Up.pdb" />
     <Content Include="script\sabio.services.faqs.js" />
     <Content Include="script\sabio.services.quizzes.js" />
     <Content Include="script\sabio.services.users.js" />
@@ -84,7 +94,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
