--- a/Front-End Warm Up/Front-End Warm Up.csproj
+++ b/Front-End Warm Up/Front-End Warm Up.csproj
@@ -68,7 +68,9 @@
   <ItemGroup>
     <Content Include="bin\Front-End Warm Up.dll" />
     <Content Include="bin\Front-End Warm Up.pdb" />
+    <Content Include="danny.html" />
     <Content Include="newFaq.html" />
+    <Content Include="newQuiz.html" />
     <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <Content Include="obj\Debug\Front-End Warm Up.csproj.CopyComplete" />
     <Content Include="obj\Debug\Front-End Warm Up.csproj.CoreCompileInputs.cache" />
